# NL2BI-AI-assistant

./: .env.example  .gitignore  NEW_AGENT_BRIEFING.md  README.md  RESEARCH_SUMMARY_FINAL.md  integration_packet_peter.md  pyproject.toml  requirements.txt
colab/: .env.colab.example  README.md  agent_bridge.py  config.py  db_engine.py  errors.py  extract_pipeline.py  gpu.py  metadata.py  model.py  plan.py  prompt.py  requirements-colab.txt  schema_loader.py  smoke_extract.py  sql_guard.py  sql_runner.py  text_to_sql_colab_server.ipynb  text_to_sql_colab_server.py
colab_bridge/: README.md
configs/: colab_cpu.yaml  colab_llm_14b.yaml  colab_llm_8b.yaml  colab_llm_reranker.yaml  default.yaml  spider2_dbt_experiments.yaml  stage8_large_llm_models.json
contracts/: __init__.py  common.py  extraction.py  nl2chart.py  visualization.py
demo_data/: commission_prompt_suite.json  data_sources.json
docs/: 00_README_START_HERE.md  03_claude_colab_text_to_sql_report.md  04_multi_engine_5_sources_crash_test.md  05_planner_emitter_comparison.md  06_final_50q_testbed.md  README.en.md  README.ru.md  codex_server_colab_report.md  final_integration_review_server_colab.md  runtime_split.md  section5_NL2BI_Petukhov.docx  server_runbook.md  stage8_large_llm.ru.md
notebooks/: 00_setup_and_drive.ipynb  01_prepare_benchmarks.ipynb  02_run_baselines_cpu.ipynb  02_run_existing_tools_cpu.ipynb  03_run_local_llm.ipynb  04_evaluate_and_render.ipynb  05_make_report_materials.ipynb  06_run_stage8_large_llms.ipynb  example.ipynb  example_agent_setup_clean.ipynb  upload.ipynb
outputs/: REPORT.md  (+23 more)
(+2736 files in other folders)
